@@ -128,7 +128,7 @@ void bdemount_signal_handler(
 	}
 }
 
-#if defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 
 #if ( SIZEOF_OFF_T != 8 ) && ( SIZEOF_OFF_T != 4 )
 #error Size of off_t not supported
@@ -606,7 +606,7 @@ on_error:
 	return( result );
 }
 
-#endif /* defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H ) */
+#endif /* defined( HAVE_LIBFUSE ) */
 
 /* The main program
  */
@@ -629,7 +629,7 @@ int main( int argc, char * const argv[] )
 	int result                                                 = 0;
 	int verbose                                                = 0;
 
-#if defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	struct fuse_operations bdemount_fuse_operations;
 	struct fuse_chan *bdemount_fuse_channel                    = NULL;
 	struct fuse *bdemount_fuse_handle                          = NULL;
@@ -851,7 +851,7 @@ int main( int argc, char * const argv[] )
 
 		goto on_error;
 	}
-#if defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	if( memory_set(
 	     &bdemount_fuse_operations,
 	     0,
@@ -938,7 +938,7 @@ on_error:
 		liberror_error_free(
 		 &error );
 	}
-#if defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	if( bdemount_fuse_handle != NULL )
 	{
 		fuse_destroy(
