@@ -27,9 +27,7 @@
  * before including libbde.h
  */
 #if defined( _WIN32 ) && defined( DLL_EXPORT )
-#if !defined( HAVE_STATIC_EXECUTABLES )
 #define LIBBDE_DLL_IMPORT
-#endif
 #endif
 
 #include <libbde.h>
