@@ -1,6 +1,6 @@
 dnl Functions for libfvalue
 dnl
-dnl Version: 20111007
+dnl Version: 20111010
 
 dnl Function to detect if libfvalue available
 dnl ac_libfvalue_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -31,10 +31,15 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     [ac_cv_libfvalue_dummy=yes],
     [ac_cv_libfvalue=no])
   
-   dnl String functions
+   dnl UTF-8 string functions
    AC_CHECK_LIB(
     fvalue,
     libfvalue_utf8_string_decimal_copy_from_8bit,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_utf8_string_decimal_copy_to_8bit,
     [ac_cv_libfvalue_dummy=yes],
     [ac_cv_libfvalue=no])
    AC_CHECK_LIB(
@@ -44,7 +49,22 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     [ac_cv_libfvalue=no])
    AC_CHECK_LIB(
     fvalue,
+    libfvalue_utf8_string_decimal_copy_to_16bit,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
     libfvalue_utf8_string_decimal_copy_from_32bit,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_utf8_string_decimal_copy_to_32bit,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_utf8_string_decimal_copy_from_64bit,
     [ac_cv_libfvalue_dummy=yes],
     [ac_cv_libfvalue=no])
    AC_CHECK_LIB(
@@ -57,6 +77,14 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     libfvalue_utf8_string_hexadecimal_copy_to_64bit,
     [ac_cv_libfvalue_dummy=yes],
     [ac_cv_libfvalue=no])
+
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_utf8_string_split,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+
+   dnl UTF-16 string functions
    AC_CHECK_LIB(
     fvalue,
     libfvalue_utf16_string_decimal_copy_from_8bit,
@@ -68,6 +96,23 @@ AC_DEFUN([AX_LIBFVALUE_CHECK_LIB],
     [ac_cv_libfvalue_dummy=yes],
     [ac_cv_libfvalue=no])
   
+   dnl Split string functions
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_split_utf8_string_free,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_split_utf8_string_get_number_of_segments,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+   AC_CHECK_LIB(
+    fvalue,
+    libfvalue_split_utf8_string_get_segment_by_index,
+    [ac_cv_libfvalue_dummy=yes],
+    [ac_cv_libfvalue=no])
+
    dnl Table functions
    AC_CHECK_LIB(
     fvalue,
